# Optimaize

./: .gitignore  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml
examples/scratch/: scratch.py  test.html  test.ipynb
examples/toy_project/: pyproject.toml
examples/toy_project/toy_project/: copy_array.py  sieve.py  test_fibonacci.py
src/: extension.ts
src/pyoptimaizer/: pyproject.toml
src/pyoptimaizer/pyoptimaizer/: __main__.py  assistants.py  display.py  exceptions.py  html_display.py  optimize.py  prompt.py  source_utils.py  types.py  utils.py  websocket_client.py
src/pyoptimaizer/pyoptimaizer/instruction_templates/cython_code_optimizer/: v1.txt
src/pyoptimaizer/pyoptimaizer/instruction_templates/python_test_creator/: v1.txt
src/pyoptimaizer/pyoptimaizer/tests/: test_optimization.py
src/pyoptimaizer/pyoptimaizer/tests/example_code/: fibonacci.py
